--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Cours debutant React" />
   <link rel="shortcut icon" href="./img/favicon.ico" />
   <title>React Word</title>
 </head>
